revisi swagger dan tambah error_response
